tests/baselines/reference/restParamModifier(strict=true).errors.txt
restParamModifier.ts(2,17): error TS7019: Rest parameter 'public' implicitly has an 'any[]' type.
restParamModifier.ts(2,27): error TS1005: ',' expected.


==== restParamModifier.ts (2 errors) ====
    class C {
        constructor(...public rest: string[]) {}
                    ~~~~~~~~~
!!! error TS7019: Rest parameter 'public' implicitly has an 'any[]' type.
                              ~~~~
!!! error TS1005: ',' expected.
    }